Align page style with bootstrap.css

--- a/tribute.html
+++ b/tribute.html
@@ -1,12 +1,22 @@
 <body>
-  <div class="container-fluid">
-    <div class="box">
-      <h1>Leonardo da Vinci<br/>
-      <small><em>Renaissance Man</em></small>
-      </h1>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/46/Leonardo_IMG_1759.JPG/764px-Leonardo_IMG_1759.JPG" class="img-responsive img-fluid center-block" alt="Leonardo da Vinci in Amboise">
-      <div class="text">
-        <p>Timeline of Leonardo life:
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-1 col-md-1">
+      </div>
+      <div class="col-xs-10 col-md-10 well">
+        <h1 class="text-center">Leonardo da Vinci<br/>
+        <small><em>Renaissance Man</em></small>
+        </h1>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/46/Leonardo_IMG_1759.JPG/764px-Leonardo_IMG_1759.JPG" class="img-responsive center-block" style="border-radius: 10px" alt="Leonardo da Vinci in Amboise">
+      </div>
+      <div class="col-xs-1 col-md-1">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-1 col-md-2">
+      </div>
+      <div class="col-xs-10 col-md-8">
+        <p>Timeline of Leonardo life:</p>
           <ul>
             <li><b>April 15, 1452</b> - Leonardo was born in Vinci, a village near Florence, Italy. He was illegitimate. His father Piero was a notary from a good family and his mother Caterina was a poor peasant girl. Until he was five Leonardo lived with his mother in this stone house in the beautiful hills of Vinci. His father married another woman and had little Leonardo brought to live with them. So Leonardo grew up an only child in a comfortable house with his father, his grandfather, his uncle, and his step-mother. He played happily with his friends and animals in the vineyards of Vinci. He had lessons in math, geometry, grammar, music, and Latin; and he astounded his math teacher with smart questions. But what he really liked doing was his own experiments, singing and playing the lyre, and drawing and painting. He once painted a scary monster on a neighbor’s shield that was so impressive that his father sold it to a Duke.</li>
 
@@ -56,14 +66,17 @@
             <li><b>1516—1519</b> - Leonardo went to France to serve King Francis. By now Leonardo was the most famous artist in the world. The King was delighted to finally have the great genius in his service and gave him a lordly pension and a house to live in (the Cloux Lucé) near his castle at Amboise. Leonardo lived and worked with his companion Francesco Melzi.</li>
 
             <li><b>1519</b> - He died on May 2. The King treated him as a close friend and visited him at his manor during his last illness. Legend has it that the King was present at his death and even held him in his arms when he expired. He was buried in the Castle (Château d’Amboise) chapel of Saint-Hubert.</li>
+
           </ul>
-        </p>
-      <blockquote>
-        <p>"In the normal course of events many men and women are born with remarkable talents; but occasionally, in a way that transcends nature, a single person is marvellously endowed by Heaven with beauty, grace and talent in such abundance that he leaves other men far behind, all his actions seem inspired and indeed everything he does clearly comes from God rather than from human skill. Everyone acknowledged that this was true of Leonardo da Vinci, an artist of outstanding physical beauty, who displayed infinite grace in everything that he did and who cultivated his genius so brilliantly that all problems he studied he solved with ease.Reference"</p>
-        <cite title="Lives of the Artists">— Giorgio Vasari. Lives of the Artists.</cite>
-      </blockquote>
-      <p>For more information about <em>Leonardo da Vinci</em> visit <a href="https://en.wikipedia.org/wiki/Leonardo_da_Vinci">Wikipedia</a></p>
+        <blockquote>
+          <p>"In the normal course of events many men and women are born with remarkable talents; but occasionally, in a way that transcends nature, a single person is marvellously endowed by Heaven with beauty, grace and talent in such abundance that he leaves other men far behind, all his actions seem inspired and indeed everything he does clearly comes from God rather than from human skill."</p>
+          <footer>Giorgio Vasari. <cite title="Lives of the Artists">Lives of the Artists.</cite></footer>
+        </blockquote>
+        <p>For more information about <em>Leonardo da Vinci</em> visit <a href="https://en.wikipedia.org/wiki/Leonardo_da_Vinci">Wikipedia</a>.</p>
       </div>
-    <p class="copyright">Coded by AlStof</p>
+      <div class="col-xs-1 col-md-2">
+      </div>
+      </div>
+        <p class="text-center">Coded by AlStof</p>
   </div>
 </body>
